refactor: Stream -> List로 변경 시 불변 리스트로 생성하도록 변경